--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-			   LCLint Version 2.5m
-			      23 May 2000
-
-			      David Evans
-			 evans@cs.virginia.edu
-
+			 LCLint Version 3.0.0.9
+			     Alpha Release
+			     19 August 2001
 
 LCLint Documentation
 ====================
 
 For documentation on LCLint, please see http://lclint.cs.virginia.edu.
+
+WARNING: this is an Alpha release - new features and changes are not
+reflected in the documentation.  The file BUFFERCHECKING contains
+preliminary documentation on the array bounds checking.
 
 Build Instructions
 ==================
@@ -25,7 +26,7 @@ To build LCLint you need:
 1. Download the LCLint source package (lclint.src.tar.gz).
 
    Copy this package to the directory where you want to build LCLint.  When
-   the tar file is extracted, it will create an lclint-2.5m subdirectory.
+   the tar file is extracted, it will create an lclint-3.0.0.9 subdirectory.
 
 2. Uncompress the package:
       gzip -d lclint.src.tar.gz 
@@ -48,17 +49,17 @@ To build LCLint you need:
 
    LARCH_PATH - path to search for lclint libraries and
    initializations files. If you are using the standard directories, this
-   should be .:<base-directory>/lclint-2.5m/lib.
+   should be .:<base-directory>/lclint-3.0.0.9/lib.
 
    LCLIMPORTDIR - directory containing lcl imports files. If you are using
-   the standard directories, this is <base-directory>/lclint-2.5m/imports.
+   the standard directories, this is <base-directory>/lclint-3.0.0.9/imports.
 
    Put the commands to set these variables (the actual commands will depend
    on the shell you are using) in one of your initialization dotfiles
    (usually ~/.environment). 
 
    Set up your PATH to include the directory containing
-   lclint-2.5m/bin/lclint, or move the binary to a directory on
+   lclint-3.0.0.9/bin/lclint, or move the binary to a directory on
    your command path.
 
 7. Run: gmake test
@@ -76,3 +77,11 @@ majordomo@virginia.edu containing the body:
 
 subscribe lclint-interest
 		      
+
+
+
+
+
+
+
+
