--- a/README
+++ b/README
@@ -5,9 +5,8 @@
 			University of Virginia,
 		 Massachusetts Institute of Technology
 		 
-			    Version 3.0.0.20
-			     Alpha Release
-			    30 December 2001
+			     Version 3.0.1
+			     7 January 2001
 
 Splint Documentation
 ====================
@@ -61,10 +60,10 @@ the derived grammar files.  This is not recommended however.
 
    LARCH_PATH - path to search for splint libraries and
    initializations files. If you are using the standard directories, this
-   should be .:<base-directory>/splint-3.0.0.20/lib.
+   should be .:<base-directory>/splint-<version>/lib.
 
    LCLIMPORTDIR - directory containing lcl imports files. If you are using
-   the standard directories, this is <base-directory>/splint-3.0.0.20/imports.
+   the standard directories, this is <base-directory>/splint-<version>/imports.
 
    Put the commands to set these variables (the actual commands will depend
    on the shell you are using) in one of your initialization dotfiles
