Committing Evans's update of man page to fix problems reported by ESR.

--- a/doc/splint.1
+++ b/doc/splint.1
@@ -1,4 +1,4 @@
- .\" $Id: splint.1,v 1.1 2002/01/09 04:13:54 evans1629 Exp $
+ .\" $Id: splint.1,v 1.2 2003/03/31 18:19:38 drl7x Exp $
 .TH splint 1 "A tool for statically checking C programs"
 
 .SH NAME
@@ -259,14 +259,12 @@ strict checking.
 
 .SH AUTHOR
 If you need to get in contact with the authors send email to
-.UR
-mailto:info@splint.org
-.UR
+.UR mailto:info@splint.org
+.UE
 
 or visit 
-.UR
-http://www.splint.org
-.UR
+.UR http://www.splint.org
+.UE
 
 .SH "SEE ALSO"
 lint(1)
